@@ -1,3 +1,9 @@
+1999-07-20  Per Bothner  <per@bothner.com>
+
+	* kawa/Makefile.am, kawa/Makefile.in (BUILT_SOURCES, Version.java):
+	Moved to ./Makefile.am, to make sure Version.java is built first.
+	* Makefile.am, Makefile.in (makekawa.bat):  New rule.
+
 1999-07-19  Per Bothner  <per@bothner.com>
 
 	* configure.in:  Set version to 1.6.59.
